--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,13 +24,16 @@
     
     <div class="vid-description">
 
+        <% if @time %>
+         <br/> <div class="alert alert-info">You are only watching <%=@time%> videos. <a href='/all'>Watch Everything</a></div>
+        <%end%>
         <h3>
-         <%= @post.title %><span class="mobile_time"> (<%=@post.duration/60%> min.)</span>
+         <%= @post.title %>
 
 
        </h3>
 
-      <p><i class="fa fa-user"></i>  <%= link_to @comedian.name, comedian_path(@comedian) %> &nbsp; <%= "<i class='"'fa fa-clock-o'"'></i>&nbsp;Only showing #{@time} videos. <a href='/all'>Reset</a>".html_safe if @time %></p>
+      <p><i class="fa fa-user"></i>  <%= link_to @comedian.name, comedian_path(@comedian) %> &nbsp; <%= "<i class='"'fa fa-clock-o'"'></i>&nbsp;#{@post.duration / 60} min.".html_safe %></p>
 
       <p><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.waste5.com%2Fposts%2F<%=@post.id%>&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21&amp;appId=311642788912956" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></p>
 
