--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,6 +9,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/"><span class="wlogo">W</span><b>5</b></a>
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -29,10 +30,27 @@
               </ul>
             </li>
             <li class="side-nav-border"><a href="mailto:waste5tips@gmail.com?subject=Feedback%20%2F%20Suggested%20Video%20for%20Waste5&body=Submit%20your%20feedback%20or%20a%20link%20to%20a%20video%20you%20would%20like%20us%20to%20add%20here.%20" class="sidebar_link"><i class="fa fa-envelope"></i> Feedback</a></li>
+
+            <div class="sidebar_ad">
+              <li>.</li>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- Sidebar New -->
+              <ins class="adsbygoogle"
+                   style="display:inline-block;width:160px;height:600px"
+                   data-ad-client="ca-pub-2042522334246049"
+                   data-ad-slot="3605173928"></ins>
+              <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+            </div>
+
             <li class="side-nav-border mobile_bookmark"><%= link_to "<i class='fa fa-phone'></i> Add to Homescreen".html_safe, homescreen_path, class: "sidebar_link" %></li>
 
+         
 
           </ul>
+
+
 
 
         </div><!-- /.navbar-collapse -->
