--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,21 +27,30 @@
         <% if @time %>
          <br/> <div class="alert alert-info">You are only watching <%=@time%> videos. <a href='/all'>Watch Everything</a></div>
         <%end%>
-        <h3>
-         <%= @post.title %>
-
-
+        <h3 class="post_title">
+         <%= @post.title %> 
        </h3>
-
-      <p><i class="fa fa-user"></i>  <%= link_to @comedian.name, comedian_path(@comedian) %> &nbsp; <%= "<i class='"'fa fa-clock-o'"'></i>&nbsp;#{@post.duration / 60} min.".html_safe %></p>
-
-      <p><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.waste5.com%2Fposts%2F<%=@post.id%>&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21&amp;appId=311642788912956" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></p>
 
        
 
 
 
+      <p><i class="fa fa-user"></i>  <%= link_to @comedian.name, comedian_path(@comedian) %> &nbsp; <%= "<i class='"'fa fa-clock-o'"'></i>&nbsp;#{@post.duration / 60} min.".html_safe %></p>
+
+      <p><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.waste5.com%2Fposts%2F<%=@post.id%>&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21&amp;appId=311642788912956" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></p>
+
       <%= button_to "Next Video", post_path(@next_post, :autoplay => 1), :method => :get, class: "btn btn-green next_video" %>
+      <span class="right_ad">
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+       <!-- Side Half Banner -->
+       <ins class="adsbygoogle"
+            style="display:inline-block;width:234px;height:60px"
+            data-ad-client="ca-pub-2042522334246049"
+            data-ad-slot="5081907123"></ins>
+       <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+       </script>
+      </span>
       </div>
 
       <div class="panel-group homescreen_group" id="accordion">
