--- a/public/assets/theme.css
+++ b/public/assets/theme.css
@@ -14,6 +14,26 @@ body{
 
 }
 
+.search-input{
+  background-color: #2c3e50;
+  width: 100%;
+  color: white;
+  border: none;
+  padding: 10px 0px;
+  border-top: 1px dotted #7f8c8d;
+  padding-left: 20px;
+}
+
+.search-input{
+  outline: none;
+}
+
+.search-button{
+  background-color: #2c3e50;
+  color: white;
+  padding: 50px;
+}
+
 
 /* Edit Below to Customize Widths > 768px */
 @media (min-width:768px) {
@@ -152,8 +172,18 @@ body{
   }
 
   .sidebar_ad{
-    margin-top: 50px;
     margin-left: 30px
+  }
+
+  .right_ad{
+    position:absolute;
+    right:60px;
+    margin-top: -130px;
+
+  }
+
+  .post_title{
+    width: 700px;
   }
 
  
