--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,6 +6,10 @@
     <%= f.text_field :title %>
   </div>
   <div class="form-group">
+    <%= f.label :category %><br/>
+    <%= f.text_field :category %>
+  </div>
+  <div class="form-group">
     <%= f.label :comedian_id %><br/>
     <%= f.collection_select :comedian_id, @comedians, :id, :name, include_blank: "Please select" %>
 
