--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -33,6 +33,16 @@
                 <li><a href="/long" class="sidebar_link sub-sidebar">More than 30 Minutes</a></li>
               </ul>
             </li>
+            <li class="dropdown side-nav-border side-nav-border-last">
+              <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-folder"></i>  Filter by Category <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/african_american" class="sidebar_link sub-sidebar" >African American</a></li>
+                <li><a href="/asian" class="sidebar_link sub-sidebar">Asian</a></li>
+                <li><a href="/white" class="sidebar_link sub-sidebar">Caucasian</a></li>
+                <li><a href="/latino" class="sidebar_link sub-sidebar">Latino</a></li>
+                <li><a href="/mei" class="sidebar_link sub-sidebar">Middle Eastern / Indian</a></li>
+              </ul>
+            </li>
             <li class="side-nav-border"><a href="mailto:waste5tips@gmail.com?subject=Feedback%20%2F%20Suggested%20Video%20for%20Waste5&body=Submit%20your%20feedback%20or%20a%20link%20to%20a%20video%20you%20would%20like%20us%20to%20add%20here.%20" class="sidebar_link"><i class="fa fa-envelope"></i> Feedback</a></li>
 
             <li class="side-nav-border mobile_bookmark"><%= link_to "<i class='fa fa-phone'></i> Add to Homescreen".html_safe, homescreen_path, class: "sidebar_link" %></li>
