--- a/app/views/comedians/edit.html.erb
+++ b/app/views/comedians/edit.html.erb
@@ -8,4 +8,7 @@
 
     <%= f.submit 'Submit', :class => "btn btn-success" %>
   <% end %>
+
+  <%= link_to "Delete Comedian", comedian_path(@comedian), :method => 'delete', confirm: 'Are you sure?' %>
+
 </div>
