--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,6 +13,8 @@
       <%= f.label :category %><br/>
       <%= f.select :category, ['black', 'white', 'mei', 'latino', 'asian'], prompt: true%></div>
    </div>
+   <div class="form-group">
     <%= f.submit 'Submit', :class => "btn btn-success" %>
+  </div>
   <% end %>
 </div>
