--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -23,8 +23,15 @@
             </form>
 
             <li class="side-nav-border"><%= link_to "<i class='fa fa-home'></i> Home".html_safe, all_path, class: "sidebar_link" %></li>
-            <li class="side-nav-border"><%= link_to "<i class='fa fa-youtube-play'></i> Browse Videos".html_safe, show_list_path, class: "sidebar_link" %></li>
-            <li class="side-nav-border"><a href="/comedians" class="sidebar_link"><i class="fa fa-users"></i>  Comedians</a></li>
+            <li class="dropdown side-nav-border side-nav-border-last">
+              <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-clock-o"></i>  Browse Videos <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/latest" class="sidebar_link sub-sidebar" >Latest Videos</a></li>
+                <li><a href="/popular" class="sidebar_link sub-sidebar">All-Time Favorites</a></li>
+                <li><a href="/longest" class="sidebar_link sub-sidebar">Longest Videos</a></li>
+                <li><a href="/random" class="sidebar_link sub-sidebar">Random Videos</a></li>
+              </ul>
+            </li>
             <li class="dropdown side-nav-border side-nav-border-last">
               <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-clock-o"></i>  Filter by Length <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -43,6 +50,7 @@
                 <li><a href="/mei" class="sidebar_link sub-sidebar">Middle Eastern / Indian</a></li>
               </ul>
             </li>
+            <li class="side-nav-border"><a href="/comedians" class="sidebar_link"><i class="fa fa-users"></i>  Comedians</a></li>
             <li class="side-nav-border"><a href="mailto:waste5tips@gmail.com?subject=Feedback%20%2F%20Suggested%20Video%20for%20Waste5&body=Submit%20your%20feedback%20or%20a%20link%20to%20a%20video%20you%20would%20like%20us%20to%20add%20here.%20" class="sidebar_link"><i class="fa fa-envelope"></i> Feedback</a></li>
 
             <li class="side-nav-border mobile_bookmark"><%= link_to "<i class='fa fa-phone'></i> Add to Homescreen".html_safe, homescreen_path, class: "sidebar_link" %></li>
